--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             colors: {
               clifford: '#da373d',
               penguin: '#FFFBF0',
+              jacketprice: '#FABE4C',
+              mainbody: '#E5E5E5',
             }
           }
         }
@@ -40,5 +42,160 @@
         </div>
       </section>
     </header>
+    <main class="container mx-auto bg-mainbody">
+      <!-- Women Jacket -->
+      <section class="pb-24">
+        <h2 class="text-5xl font-bold">Women Jacket</h2>
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7 rounded-xl">
+          <!-- jacket--1 -->
+          <div class="p-4 shadow-lg rounded-xl">
+            <div class="p-5 bg-slate-100 rounded-xl">
+              <img src="./images/jacket-1.png" alt="">
+            </div>
+            <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit alias incidunt nobis voluptates laborum mollitia aut. Unde, distinctio blanditiis velit expedita possimus magni sed enim quidem fugiat aliquam eaque cupiditate.</p>
+            <div class="flex justify-between">
+              <h2 class="text-5xl font-bold text-jacketprice">$234</h2>
+              <button class="uppercase bg-[#A4BC46] py-4 px-7 text-white font-semibold rounded-xl">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                  </svg>
+                  Buy Now
+              </button>
+            </div>
+          </div>
+
+          <!-- Jacket 2 -->
+          <div class="p-4 shadow-lg rounded-xl">
+            <div class="p-5 bg-slate-100 rounded-xl">
+              <img src="./images/jacket-2.png" alt="">
+            </div>
+            <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit alias incidunt nobis voluptates laborum mollitia aut. Unde, distinctio blanditiis velit expedita possimus magni sed enim quidem fugiat aliquam eaque cupiditate.</p>
+            <div class="flex justify-between">
+              <h2 class="text-5xl font-bold text-jacketprice">$234</h2>
+              <button class="uppercase bg-[#A4BC46] py-4 px-7 text-white font-semibold rounded-xl">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                  </svg>
+                  Buy Now
+              </button>
+            </div>
+          </div>
+
+          <!-- Jacket 3 -->
+          <div class="p-4 shadow-lg rounded-xl">
+            <div class="p-5 bg-slate-100 rounded-xl">
+              <img src="./images/jacket-3.png" alt="">
+            </div>
+            <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit alias incidunt nobis voluptates laborum mollitia aut. Unde, distinctio blanditiis velit expedita possimus magni sed enim quidem fugiat aliquam eaque cupiditate.</p>
+            <div class="flex justify-between">
+              <h2 class="text-5xl font-bold text-jacketprice">$234</h2>
+              <button class="uppercase bg-[#A4BC46] py-4 px-7 text-white font-semibold rounded-xl">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                  </svg>
+                  Buy Now
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Man Jacket -->
+      <section class="pb-24">
+        <h2 class="text-5xl font-bold">Man Jacket</h2>
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7 rounded-xl">
+          <!-- jacket--1 -->
+          <div class="p-4 shadow-lg rounded-xl">
+            <div class="p-5 bg-slate-100 rounded-xl">
+              <img src="./images/jacket-4.png" alt="">
+            </div>
+            <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit alias incidunt nobis voluptates laborum mollitia aut. Unde, distinctio blanditiis velit expedita possimus magni sed enim quidem fugiat aliquam eaque cupiditate.</p>
+            <div class="flex justify-between">
+              <h2 class="text-5xl font-bold text-jacketprice">$234</h2>
+              <button class="uppercase bg-[#A4BC46] py-4 px-7 text-white font-semibold rounded-xl">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                  </svg>
+                  Buy Now
+              </button>
+            </div>
+          </div>
+
+          <!-- Jacket 2 -->
+          <div class="p-4 shadow-lg rounded-xl">
+            <div class="p-5 bg-slate-100 rounded-xl">
+              <img src="./images/jacket-5.png" alt="">
+            </div>
+            <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit alias incidunt nobis voluptates laborum mollitia aut. Unde, distinctio blanditiis velit expedita possimus magni sed enim quidem fugiat aliquam eaque cupiditate.</p>
+            <div class="flex justify-between">
+              <h2 class="text-5xl font-bold text-jacketprice">$234</h2>
+              <button class="uppercase bg-[#A4BC46] py-4 px-7 text-white font-semibold rounded-xl">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                  </svg>
+                  Buy Now
+              </button>
+            </div>
+          </div>
+
+          <!-- Jacket 3 -->
+          <div class="p-4 shadow-lg rounded-xl">
+            <div class="p-5 bg-slate-100 rounded-xl">
+              <img src="./images/jacket-6.png" alt="">
+            </div>
+            <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit alias incidunt nobis voluptates laborum mollitia aut. Unde, distinctio blanditiis velit expedita possimus magni sed enim quidem fugiat aliquam eaque cupiditate.</p>
+            <div class="flex justify-between">
+              <h2 class="text-5xl font-bold text-jacketprice">$234</h2>
+              <button class="uppercase bg-[#A4BC46] py-4 px-7 text-white font-semibold rounded-xl">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                  </svg>
+                  Buy Now
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Our Benefits -->
+      <section class="container mx-auto pb-20">
+        <div class="grid grid-cols-2 gap-7">
+          <div class="rounded-xl flex justify-around bg-white p-6">
+            <img class="w-20 h-20" src="./icons/image 12.png" alt="">
+            <div class="">
+              <h2 class="text-3xl">Find The Perfect Fit</h2>
+              <p class="pt-6">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+          <div class="rounded-xl row-span-3">
+            <img src="./images/shopping.png" alt="">
+          </div>
+          <div class="rounded-xl flex justify-around items-center bg-white p-6">
+            <img class="w-20 h-20" src="./icons/image 13.png" alt="">
+            <div class="">
+              <h2 class="text-3xl">Find The Perfect Fit</h2>
+              <p class="pt-6">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+          <div class="rounded-xl flex justify-around bg-white p-6">
+            <img class="w-20 h-20" src="./icons/image 14.png" alt="">
+            <div class="">
+              <h2 class="text-3xl">Find The Perfect Fit</h2>
+              <p class="pt-6">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="container mx-auto text-center">
+      <p>BUy FrOm Us</p>
+    </footer>
 </body>
 </html>
